repplace map with context local in ExecutionContext passed to Command.execute(..)